# Multi-Terminal

./: .gitignore  CMakeLists.txt  README.md  push.sh  run.sh
include/: terminal.hpp
src/: command.json  json_test.cpp  main.cpp  main1.cpp  main2.cpp  main3.cpp
